--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,15 @@ typings/
 
 # next.js build output
 .next
+
+# idea folder
+.idea/
+
+# DS_Store
+.DS_Store
+
+# logs
+*.log
+
+# node modules
+node_modules
